--- a/report.Rmd
+++ b/report.Rmd
@@ -255,16 +255,16 @@ dead = list()
 
 susd = list()
 maps = list()
+susc_maps = list()
 
 #model values for the calculation of β per cell: 
 dist_smoothing = 0.4       #affects the size of the region extremely close to 1.0 in distance raster 
 dist_coefficient = 6       #affects the size of the overall region above 0.0 in distance raster
-dist_threshold = 0.00000001#value at which we would like to round to 0, to prevent global infection
+dist_threshold = 0.01  #value at which we would like to round to 0, to prevent global infection
 
 r0 = 1.4 #using median of several estimates. this is per inf. period, so we need to scale for time
-r0 = r0 * 36.5 #so very oversimplified
 #population density is a proxy for number of contacts/time in addition to whats included in r_0
-popd_maxadjust = 15.0 * 36.5
+popd_maxadjust = 15.0
 #popd_maxadjust is the maximum additional number of contacts per time that popd can factor in
 #"transmission probability" we will say scales with distance from an outbreak for this model,
 #as well as the proportion of individuals in a given cell that are infected
@@ -287,10 +287,6 @@ for (year in recorded_years) {
 
   susc_tmp = if(length(susceptible) == 0) ad1300_popc_rast else susceptible[[prev_idx]]
   
-  if (length(susceptible) != 0) {
-    plot(cumsum(recovered), main=paste('cumsum recovered', year))
-  }
-  
   susd_tmp = popd_maxadjust * normalize_rast(
     if(length(susd) == 0) ad1300_popd_rast else susd[[prev_idx]]
   )
@@ -301,15 +297,16 @@ for (year in recorded_years) {
   dist_rast = exp(1)^(-10 * normalize_rast(
     dist_coefficient*terra::distance(susc_tmp, vect(curr_year_outbrks))^dist_smoothing
   ))
-  
+  plot(dist_rast, main=paste('dist_rast', year))
   dist_rast[dist_rast < dist_threshold] = 0
+  
   #the "infectiousness raster" we can use as a term in our estimate of the number of dead/infected
   #this represents the scaling of the infectiousness over distance.
-  infn_raster = (dist_rast * r0)
-  plot(infn_raster, main=paste('infn_rast', year))
+  infn_rast = (dist_rast * susd_tmp)
+  plot(infn_rast, main=paste('infn_rast', year))
   
   #the estimate of the infected. should i use terra::predict, or...?
-  infected[[curr_idx]] = floor(susd_tmp * infn_raster) #going to rework this into proper SIR
+  infected[[curr_idx]] = floor(r0 * infn_rast * 10)
   #and, the other values associated:
   susceptible[[curr_idx]] = susc_tmp - infected[[curr_idx]] #even if survived, cant be reinfected
   dead[[curr_idx]] = mortality * infected[[curr_idx]]
@@ -322,7 +319,7 @@ for (year in recorded_years) {
   maps[[curr_idx]] = 
     tm_shape(basemap) +
       tm_rgb(alpha=0.7) +
-    tm_shape(susceptible[[curr_idx]], raster.downsample=F) +
+    tm_shape(infected[[curr_idx]], raster.downsample=F) +
       tm_raster(title='Estimated Infected',
                 legend.show=T,
                 breaks=c(0,
@@ -335,7 +332,44 @@ for (year in recorded_years) {
                          1600,
                          3200,
                          6400,
-                         12800)) + #exponential scale
+                         12800)) +
+    tm_shape(maritime_routes_sf) +
+      tm_lines(col='dodgerblue', alpha=0.5) +
+    tm_shape(borders$geometry) +
+      tm_borders(alpha=0.5) + 
+    tm_shape(prev_years_outbrks) +
+      tm_dots(col='gray48') +
+    tm_shape(curr_year_outbrks) +
+      tm_dots(col='is_reoccurrence',
+              palette=c('red','blue'),
+              legend.show=FALSE) +
+    tm_add_legend(type=c('symbol'),
+                  labels=c("New Outbreak",
+                           'Recurring Outbreak',
+                           'Previous Outbreak'),
+                  col=c('red', 'blue', 'gray48')) +
+    tm_layout(legend.position=c("left", "top"),
+              frame=FALSE,
+              legend.bg.alpha=0.6,
+              main.title=year)
+  
+  susc_maps[[curr_idx]] = 
+    tm_shape(basemap) +
+      tm_rgb(alpha=0.7) +
+    tm_shape(susceptible[[curr_idx]], raster.downsample=F) +
+      tm_raster(title='Estimated Susceptible',
+                legend.show=T,
+                breaks=c(0.0,
+                         100.0,
+                         200.0,
+                         400.0,
+                         800.0,
+                         1600.0,
+                         3200.0,
+                         6400.0,
+                         12000.0,
+                         24000.0,
+                         48000.0)) + #exponential scale
     tm_shape(maritime_routes_sf) +
       tm_lines(col='dodgerblue', alpha=0.5) +
     tm_shape(borders$geometry) +
@@ -358,6 +392,7 @@ for (year in recorded_years) {
 }
 for (i in 1:length(maps)) {
   print(maps[[i]])
+  print(susc_maps[[i]])
 }
 
 tm_shape(basemap) +
